// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accRating": 80.925,
  "accuracyPct": 35,
  "allStatTotal": 263,
  "atk": 70,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 8.6,
  "critMult": 1.5550299513149461,
  "critResistPct": 1.5,
  "def": 10,
  "dexStat": 148,
  "evaRating": 76.5,
  "evasionPct": 75,
  "extraAttackChancePct": 68.3,
  "healMult": 1.1500000000000001,
  "hp": 685,
  "intStat": 15,
  "lukStat": 55,
  "magicAtk": 17,
  "magicDef": 14,
  "magicMinDamage": 3,
  "maxHp": 685,
  "maxMp": 227,
  "minDamage": 3,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 136.6,
  "spiStat": 15,
  "strStat": 15,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accRating": 35.375,
  "accuracyPct": 35,
  "allStatTotal": 100,
  "atk": 24,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.4604255649461715,
  "critResistPct": 1.5,
  "def": 10,
  "dexStat": 15,
  "evaRating": 0,
  "evasionPct": 0,
  "extraAttackChancePct": 7.125,
  "healMult": 1.1500000000000001,
  "hp": 245,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 17,
  "magicDef": 14,
  "magicMinDamage": 3,
  "maxHp": 245,
  "maxMp": 92,
  "minDamage": 4,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 14.25,
  "spiStat": 15,
  "strStat": 25,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accRating": 49.925,
  "accuracyPct": 35,
  "allStatTotal": 253,
  "atk": 17,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.45280302180028,
  "critResistPct": 4.5,
  "def": 10,
  "dexStat": 15,
  "displayAttack": "magic",
  "evaRating": 0,
  "evasionPct": 0,
  "extraAttackChancePct": 7.125,
  "healMult": 1.33,
  "hp": 685,
  "intStat": 148,
  "lukStat": 15,
  "magicAtk": 123,
  "magicDef": 43,
  "magicMinDamage": 25,
  "maxHp": 685,
  "maxMp": 501,
  "minDamage": 3,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 14.25,
  "spiStat": 45,
  "strStat": 15,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accRating": 50.125,
  "accuracyPct": 35,
  "allStatTotal": 255,
  "atk": 36,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 16.2,
  "critMult": 1.7329671756295133,
  "critResistPct": 1.5,
  "def": 10,
  "dexStat": 60,
  "evaRating": 52.5,
  "evasionPct": 52.5,
  "extraAttackChancePct": 28.5,
  "healMult": 1.1500000000000001,
  "hp": 685,
  "intStat": 15,
  "lukStat": 135,
  "magicAtk": 17,
  "magicDef": 14,
  "magicMinDamage": 3,
  "maxHp": 685,
  "maxMp": 227,
  "minDamage": 3,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 57,
  "spiStat": 15,
  "strStat": 15,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accRating": 37.375,
  "accuracyPct": 35,
  "allStatTotal": 275,
  "atk": 53,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.4755190439471157,
  "critResistPct": 1.5,
  "def": 72,
  "dexStat": 15,
  "evaRating": 0,
  "evasionPct": 0,
  "extraAttackChancePct": 4.625,
  "healMult": 1.7700000000000002,
  "hp": 1220,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 17,
  "magicDef": 14,
  "magicMinDamage": 3,
  "maxHp": 1220,
  "maxMp": 227,
  "minDamage": 15,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 9.25,
  "spiStat": 15,
  "strStat": 45,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accRating": 47.675,
  "accuracyPct": 35,
  "allStatTotal": 263,
  "atk": 133,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.5501420281376743,
  "critResistPct": 1.5,
  "def": 32,
  "dexStat": 15,
  "evaRating": 0,
  "evasionPct": 0,
  "extraAttackChancePct": 1.625,
  "healMult": 1.31,
  "hp": 978,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 17,
  "magicDef": 14,
  "magicMinDamage": 3,
  "maxHp": 978,
  "maxMp": 227,
  "minDamage": 24,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 3.25,
  "spiStat": 15,
  "strStat": 148,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "b34cb6e80f70746d5eba7645d0e01fa831135422",
    "outcome": "win",
    "playerHp": 975,
    "playerMp": 227,
    "turns": 7,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "28f33cd00d21840ddaed608d606a0c570b0fc7e1",
    "outcome": "win",
    "playerHp": 978,
    "playerMp": 227,
    "turns": 8,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "a9f3d37363e55472fa0e39d884488cebfda3880d",
    "outcome": "win",
    "playerHp": 670,
    "playerMp": 227,
    "turns": 35,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "0d198ebebcff727a5958c560cf0dde7f9a62029d",
    "outcome": "win",
    "playerHp": 684,
    "playerMp": 227,
    "turns": 13,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "e81b6d53d21776fa9acf107d38e6571054877269",
    "outcome": "win",
    "playerHp": 637,
    "playerMp": 501,
    "turns": 15,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "7b7e4b91869435c693f895dc8752d26ebda0956e",
    "outcome": "win",
    "playerHp": 1099,
    "playerMp": 227,
    "turns": 28,
  },
  {
    "enemyHp": 0,
    "label": "heal_vs_들소_boss",
    "logSha": "b7c24d496f63937a5dae665bf6c550e5daabe42c",
    "outcome": "win",
    "playerHp": 1198,
    "playerMp": 227,
    "turns": 46,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "95d6f874f16b970c05f3d30f78143b5b6febf783",
    "outcome": "win",
    "playerHp": 672,
    "playerMp": 501,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "3b55206ab4f50e4fc78cf20098a17e373219f6db",
    "outcome": "win",
    "playerHp": 242,
    "playerMp": 92,
    "turns": 10,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "fa343cd4ab5baaf3236b910f9b629e1277e75c53",
    "outcome": "p1_win",
    "turns": 33,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "f720d4d3c86cde7977e2bae2de681c65c2b6618e",
    "outcome": "p1_win",
    "turns": 90,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "571881116a7ecf41525aa0444b6ced8345662468",
    "outcome": "p2_win",
    "turns": 82,
  },
]
`;

exports[`골든: 적 페이즈 메커닉 커버리지 (리팩터 가드) > 적 페이즈 메커닉 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "enemy_dot_tick",
    "logSha": "6f21631bfeb1c6208fb39c3f1e7a273a947def6e",
    "outcome": "win",
    "playerHp": 966,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "chill_enemy",
    "logSha": "813f50d7bf43c31f2cdebcc680039963dfacb5f5",
    "outcome": "win",
    "playerHp": 1148,
    "playerMp": 227,
    "turns": 21,
  },
  {
    "enemyHp": 0,
    "label": "thorns_reflect",
    "logSha": "301ca7fdaf792b34bc548b28196794df0af37d32",
    "outcome": "win",
    "playerHp": 1199,
    "playerMp": 227,
    "turns": 24,
  },
  {
    "enemyHp": 0,
    "label": "evade_reflect",
    "logSha": "476badad4034702ec716f04abfb9858637f6ca83",
    "outcome": "win",
    "playerHp": 668,
    "playerMp": 227,
    "turns": 69,
  },
  {
    "enemyHp": 0,
    "label": "enrage_enemy",
    "logSha": "af3e96e0d059667a42e032741448e7d1f0a31444",
    "outcome": "win",
    "playerHp": 956,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "brace_enemy",
    "logSha": "2a36123d55a6019cf98e6e88976db6d0f2fce23c",
    "outcome": "win",
    "playerHp": 966,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "heavyblow_enemy",
    "logSha": "52580a54e5aa080dacd869999203c421048cfe76",
    "outcome": "win",
    "playerHp": 1000,
    "playerMp": 227,
    "turns": 37,
  },
]
`;
